# pve-orchestrator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/: copilot-instructions.md
src/pve_orchestrator/: __init__.py  cli.py
src/pve_orchestrator/core/: hardware.py  scheduler.py  task.py
src/pve_orchestrator/drivers/: nvidia.py  proxmox.py
